머신러닝 모델 학습

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+part7/data/San-Francisco-Crime.csv filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
